<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012-2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Advanced settings</string>

    <string name="defaults_button">Reset to default</string>

    <!-- Haptic Preference -->
    <string name="category_haptic_title">Haptic</string>

    <!-- VibratorTuning -->
    <string name="vibrator_title">Vibrator</string>
    <string name="vibrator_tuning_title">Vibration strength</string>
    <string name="vibrator_tuning_summary_head">Adjust the strength of the vibration feedback</string>
    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>

    <!-- Touchscreen Preference -->
    <string name="category_touchscreen_title">Touchscreen</string>
    <string name="logo2menu_title">Logo To Menu</string>
    <string name="logo2menu_switch_title_head">Enable</string>
    <string name="logo2menu_switch_summary_head">Enables the HTC logo\'s upper part to act as hardware Menu button.</string>
    <string name="longtaplogosleep_switch_title_head">Longtap Sleep</string>
    <string name="longtaplogosleep_switch_summary_head">If checked, long tapping the HTC logo\'s upper part will put the phone to sleep. If checked, it overrides System/Hardware Keys - Menu button long tap setting.</string>

    <string name="wake_title">Wake</string>
    <string name="wake_method_title_head">Wake Method</string>
    <string name="wake_method_summary_head">Select which touchpad wake method you prefer to use.</string>

</resources>
